alterações no contato.html

--- a/contato.html
+++ b/contato.html
@@ -19,20 +19,24 @@
     </nav>
     <main>
         <div class="container">
-        <h2>Como falar comigo?</h2>
-        <ul type="none">
-            <li><img id="logo_imagens" src="imgs/logo-instagram.png" alt="logo-instagram"> <a id="contatos"
-                    href="https://www.instagram.com/luan_lima280?igsh=MXkwc3JxNHUyaHBnYQ%3D%3D&utm_source=qr"
-                    target="_blank">Meu Instagram</a></li>
-
-            <li><img id="logo_imagens" src="imgs/logo-linkedin.png" alt="logo-linkedin"><a id="contatos"
-                    href="https://www.linkedin.com/in/luan-lima280/" target="_blank"> Meu Linkdin</a></li>
-
-            <li><img id="logo_imagens" src="imgs/logo-github.png" alt="logo-github"><a id="contatos"
-                    href="https://github.com/Luan280" target="_blank"> Meu GitHub</a></li>
-        </ul>
-    
-    </main>
+          <h2>Como falar comigo?</h2>
+          <ul class="contact-list">
+            <li>
+              <img class="icon-img" src="imgs/logo-instagram.png" alt="logo-instagram">
+              <a href="https://www.instagram.com/luan_lima280" target="_blank">Meu Instagram</a>
+            </li>
+            <li>
+              <img class="icon-img" src="imgs/logo-linkedin.png" alt="logo-linkedin">
+              <a href="https://www.linkedin.com/in/luan-lima280/" target="_blank">Meu LinkedIn</a>
+            </li>
+            <li>
+              <img class="icon-img" src="imgs/logo-github.png" alt="logo-github">
+              <a href="https://github.com/Luan280" target="_blank">Meu GitHub</a>
+            </li>
+          </ul>
+        </div>
+      </main>
+      
     <footer>
         &copy; 2025 LUAN FERREIRA LIMA
     </footer>
