alterações no formacao.html

--- a/formacao.html
+++ b/formacao.html
@@ -21,9 +21,18 @@
     <h2>Formação Academica:</h2>
     <ul>
       <li>Ensino médio completo</li>
-      <li>Curso de Montagem e manutenção de computadores</li>
-      <li>Curso de pacote office completo (Word, PowerPoint, Excel, Windows 10)</li>
-      <li>Cursando Faculdade de Engenharia de Software (2º ano)</li>
+      <li>Cursando: Engenharia de Software
+        <p>Instituição: Centro Universitário Internacional UNINTER </p>
+        <p>Período: 01/2024 - 01/2028 </p>
+      </li>
+      <li>Python Avançado – Udemy (141h)</li>
+      <li>HTML e CSS – Microlins (15h)</li>
+      <li>Lógica de programação – (15h)</li>
+      <li>Algoritmos – Curso em vídeo (40h)</li>
+      <li>Linux – Curso em Vídeo (40h)</li>
+      <li>Git e GitHub – Curso em Vídeo (20h)</li>
+      <li>Montagem e Manutenção de Computadores – Microlins (40h)</li>
+      <li>Pacote Office – Microlins (40h)</li>
     </ul>
   </main>
   <footer>
